# ai-welding-platform

./: .replit  a.txt  app.json  aruco_rectify.py  gpt_advisor.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  test_client.py  vision_processor.py  welding_calculator.py
.agents/: agent_assets_metadata.toml
app/: _layout.tsx  coaching-live.tsx  coaching-test.tsx  exam-record.tsx  home.tsx  login.tsx  register-photo.tsx  register.tsx
attached_assets/: GTAW_Multiple_Choice_Questions_1777080999373.txt  GTAW_Multiple_Choice_Questions_Set10_1777080999386.txt  GTAW_Multiple_Choice_Questions_Set2_1777080999374.txt  GTAW_Multiple_Choice_Questions_Set3_1777080999375.txt  GTAW_Multiple_Choice_Questions_Set4_1777080999377.txt  GTAW_Multiple_Choice_Questions_Set5_1777080999379.txt  GTAW_Multiple_Choice_Questions_Set6_1777080999381.txt  GTAW_Multiple_Choice_Questions_Set7_1777080999383.txt  GTAW_Multiple_Choice_Questions_Set8_1777080999384.txt  GTAW_Multiple_Choice_Questions_Set9_1777080999385.txt  GTAW_OX_Questions_1777080999374.txt  GTAW_OX_Questions_Set10_1777080999385.txt  GTAW_OX_Questions_Set2_1777080999375.txt  GTAW_OX_Questions_Set3_1777080999376.txt  GTAW_OX_Questions_Set4_1777080999378.txt  GTAW_OX_Questions_Set5_1777080999379.txt  GTAW_OX_Questions_Set6_1777084435257.txt  GTAW_OX_Questions_Set7_1777084435257.txt  GTAW_OX_Questions_Set8_1777080999384.txt  GTAW_OX_Questions_Set9_1777084435258.txt  Pasted--1-1-beadA-1774954086314_1774954086316.txt  Pasted--1-Roboflow-30-crack-Crac-1775940504312_1775940504313.txt  abc_1773833482863.txt  (+17 more)
(+39 files in other folders)
